Update AttributeValue.java